Fix extra padding on Main CenteredView

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
 body {
   padding: 0px;
   margin: 0rem;
-  padding-left: -1.24rem;
   background-color: "#252737";
   width: "100vw";
   height: "100vh";
